# video_to_data

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  test.py
reconstruction/modules/v2d_common/: __init__.py  broadcast.py  datatypes.py  pyproject.toml  utils.py  video.py
reconstruction/modules/v2d_depth/: pyproject.toml
reconstruction/modules/v2d_docker/: __init__.py  container.py  pyproject.toml
reconstruction/modules/v2d_io/: pyproject.toml
reconstruction/modules/v2d_math/: pyproject.toml
reconstruction/modules/v2d_mv/: __init__.py  pyproject.toml
reconstruction/modules/v2d_pipelines/: extract_images.py  frames_to_video.py  pyproject.toml  run_ego_wilor.py  run_example_pipeline.py  run_hand_masks.py  run_mv_calibration.py  run_mv_hoi_reconstruction.py  run_mv_reconstruction.py  run_pipeline.py  run_premade_mesh_tracking.py  run_sam3d_mesh_render.py  run_test_pipeline.py  run_test_pipeline_2.py  run_v2d_ego_e2e.py  run_v2d_ego_video.py  run_video_object_tracking.py  stitch_videos.py
reconstruction/modules/v2d_viz/: pyproject.toml  run_3d_viewer.py
robotic_grounding/: .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
robotic_grounding/.claude/commands/: eval-record.md  getneval.md  grid-video.md  launch-two-stage.md
robotic_grounding/experiments/: README.md  __init__.py  experiment_config.yaml  launch_stage2.py  monitor_two_stage.py  registry.yaml  run_experiment.py  utils.py
robotic_grounding/experiments/example_AC_post/: config.yaml
robotic_grounding/experiments/example_fixed_post/: config.yaml
robotic_grounding/experiments/example_osmo_sequences/: config.yaml
robotic_grounding/experiments/example_param_sweep/: config.yaml  workflow.py
robotic_grounding/experiments/example_pre_fixed_post/: config.yaml
robotic_grounding/experiments/example_pre_fixed_post_stage1/: config.yaml
robotic_grounding/experiments/example_pre_fixed_post_stage2/: config.yaml
robotic_grounding/experiments/example_sequence_list/: config.yaml  workflow.py
robotic_grounding/experiments/example_single_run/: config.yaml
robotic_grounding/experiments/example_stage1_nocoll/: config.yaml  workflow.py
robotic_grounding/experiments/example_stage2/: config.yaml
robotic_grounding/experiments/example_two_stage/: config.yaml  workflow.py
robotic_grounding/experiments/recon_body_apple_pick/: config.yaml
robotic_grounding/experiments/recon_body_blue_trash_can_drag_007/: config.yaml
robotic_grounding/experiments/recon_body_bottle_pick_transfer/: config.yaml
robotic_grounding/experiments/recon_body_corn_can_right_left_handover_01/: config.yaml
robotic_grounding/experiments/recon_body_dark_blue_book_pick_handover_place_02/: config.yaml
robotic_grounding/experiments/recon_body_shalin_bottle_1/: config.yaml
robotic_grounding/experiments/recon_body_sit_skinny_wood_chair_01/: config.yaml
robotic_grounding/experiments/recon_body_snack_box_pick_and_place_01/: config.yaml
robotic_grounding/scripts/: data_assessor.py  fetch_object_assets.py  filter_penetrations.py  generate_rigid_urdfs.py  launch_stage2.py  license_header_hook.py  list_css_sequences.py  materialize_osmo_bundle.py  monitor_two_stage.py  process_arctic_grab.py  pull_arctic_subset.py  reconstruct_support_surfaces.py  replay_motion.py  replay_motion_viser.py  run_experiment.py  run_osmo.py  segment_to_atomic.py  setup_css_env.sh  setup_soma_assets.py  sync_css_data.py  train_tpv_wholebody_workflow.sh  upload_object_assets.py  validate_training_assets.py  view_scene.py  vis_wrench_support.py
robotic_grounding/scripts/data_quality_checks/: __init__.py  arctic_support_disks.py  dummy_agent_success.py  hand_penetration.py
robotic_grounding/scripts/download_sources/: dexycb.sh  grab.sh
robotic_grounding/scripts/retarget/: _offline_video.py  arctic_loader.py  arctic_to_dex3.py  arctic_to_sharpa.py  create_soma_task.py  dexycb_loader.py  dexycb_to_sharpa.py  grab_loader.py  grab_to_sharpa.py  h2o_loader.py  h2o_to_sharpa.py  hot3d_loader.py  hot3d_to_sharpa.py  nvhuman_to_dex3.py  nvhuman_to_g1.py  oakink2_loader.py  oakink2_to_sharpa.py  process_soma_sequence.sh  run_loader.py  run_retarget.py  soma_loader_probe.py  soma_to_g1.py  taco_loader.py  taco_to_dex3.py  taco_to_sharpa.py  v2d_reconstruction_loader.py  v2d_reconstruction_to_sharpa.py  verify_tips_distance.py  vis_retargeted.py
robotic_grounding/tests/: test_distance_utils.py  test_load_asset.py  test_motion_schema.py  test_motion_schema_parquet_integration.py  test_nvhuman_g1_parquet_integration.py  test_reference_plane.py  test_replay_data.py  test_retarget_pipeline_e2e.py  test_train_e2e.py  test_whole_body_kinematics_baseline.py
robotic_grounding/visualizer/: README.md  serve.py  sync_visualizer_data.py
robotic_grounding/workflow/: Dockerfile  Dockerfile.aarch64  README.md  data_pipeline.md  data_storage.md  retarget.yaml  retarget_list.yaml  run.sh  setup_deps.sh  train.yaml
video_ingestion_agent/: .dockerignore  .gitignore  .gitlab-ci.yml  .link-check.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cosmos  LICENSE  NOTICE  README.md  pyproject.toml
video_ingestion_agent/configs/: batch_ingestion.yaml  benchmark_epic_kitchens.yaml  benchmark_hot3d.yaml  ingestion.yaml  retrieval.yaml  webapp.yaml
video_ingestion_agent/docs/: Makefile  README.md  conf.py  index.rst  release_readiness.md  requirements.txt
video_ingestion_agent/osmo_workflows/: batch_ingestion.yaml  benchmark.yaml  dev_env.yaml  webapp.yaml
video_ingestion_agent/scripts/: run_batch_ingestion.py  run_benchmark.py  run_benchmark_hot3d.py  run_ingestion.py  run_osmo.py  run_retrieval.py  run_webapp.py  serve.py
video_ingestion_agent/tests/: test_adapter.py  test_common_utils.py  test_dedup.py  test_executor_visual.py  test_extract_clip.py  test_ingestion.py  test_reconstruction_service.py  test_retrieval_config.py  test_retrieval_parallel.py  test_sharding.py  test_visual_extractor.py
(+2765 files in other folders)
