[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-common"
version = "0.1.0"
description = "Common data types shared across v2d services"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
]

[tool.setuptools]
packages = ["v2d.common"]

[tool.setuptools.package-dir]
"v2d.common" = "."
