# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: CC-BY-4.0 AND Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-common"
version = "0.1.0"
description = "Common data types shared across v2d services"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
]

[project.optional-dependencies]
io = [
    "opencv-python",
    "imageio[pyav]",
    "av",
    "tqdm",
    "h5py",
]

[tool.setuptools]
packages = ["v2d.common"]

[tool.setuptools.package-dir]
"v2d.common" = "."
