# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-docker"
version = "0.1.0"
description = "Shared Docker container orchestration utilities for v2d modules"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["v2d.docker"]

[tool.setuptools.package-dir]
"v2d.docker" = "."
