[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-io"
version = "0.1.0"
description = "Shared I/O utilities for v2d modules"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "opencv-python",
    "imageio[pyav]",
    "av",
    "tqdm",
]

[tool.setuptools]
packages = ["v2d.io"]

[tool.setuptools.package-dir]
"v2d.io" = "."
