[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-math"
version = "0.1.0"
description = "Shared math utilities for v2d modules"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools]
packages = ["v2d.math"]

[tool.setuptools.package-dir]
"v2d.math" = "."
