[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-pipelines"
version = "0.1.0"
description = "Example pipelines composing v2d Docker modules"
requires-python = ">=3.10"
dependencies = []
# Runtime dependencies are local packages installed via scripts/install_packages.sh

[tool.setuptools]
packages = ["v2d.pipelines"]

[tool.setuptools.package-dir]
"v2d.pipelines" = "."
