[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-anycalib-docker"
version = "0.1.0"
description = "Docker orchestration scripts for AnyCalib"
requires-python = ">=3.10"
dependencies = ["v2d-docker"]

[tool.setuptools]
packages = ["v2d.anycalib.docker"]

[tool.setuptools.package-dir]
"v2d.anycalib.docker" = "."
