[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-anycalib-lib"
version = "0.1.0"
description = "AnyCalib-based monocular camera calibration and undistortion"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "opencv-python",
    "anycalib @ git+https://github.com/javrtg/AnyCalib.git",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.anycalib.lib"]

[tool.setuptools.package-dir]
"v2d.anycalib.lib" = "."
