# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: CC-BY-4.0 AND Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-bundlesdf-docker"
version = "0.1.0"
description = "Docker orchestration scripts for BundleSDF reconstruction"
requires-python = ">=3.10"
dependencies = ["v2d-docker"]

[tool.setuptools]
packages = ["v2d_bundlesdf.docker"]

[tool.setuptools.package-dir]
"v2d_bundlesdf.docker" = "."
