[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-bundlesdf-lib"
version = "0.1.0"
description = "BundleSDF SDF learning and texture baking library (runs inside container)"
requires-python = ">=3.10"
dependencies = ["v2d-common"]

[tool.setuptools]
packages = ["v2d_bundlesdf.lib"]

[tool.setuptools.package-dir]
"v2d_bundlesdf.lib" = "."
