[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-cusfm-lib"
version = "0.1.0"
description = "CuSFM structure-from-motion library (runs inside container)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["v2d_cusfm.lib"]

[tool.setuptools.package-dir]
"v2d_cusfm.lib" = "."
