# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: CC-BY-4.0 AND Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-depth-anything-lib"
version = "0.1.0"
description = "Depth Anything V3 monocular depth estimation library"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "Pillow",
    "opencv-python",
    "huggingface_hub[cli]",
    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/depth-anything-3.git",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.depth_anything.lib"]

[tool.setuptools.package-dir]
"v2d.depth_anything.lib" = "."
