[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-detectron2-lib"
version = "0.1.0"
description = "Detectron2-based human detection and tracking"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "imageio[pyav]",
    "av",
    "tqdm",
    "torch",
    "omegaconf",
    "v2d-mv[io]",
]

[tool.setuptools]
packages = ["v2d.detectron2.lib"]

[tool.setuptools.package-data]
"v2d.detectron2.lib" = ["*.yaml"]

[tool.setuptools.package-dir]
"v2d.detectron2.lib" = "."
