[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-droid-slam-lib"
version = "0.1.0"
description = "DROID-SLAM monocular SLAM library"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "Pillow",
    "gdown",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.droid_slam.lib"]

[tool.setuptools.package-dir]
"v2d.droid_slam.lib" = "."
