[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-ego-hand-reconstruction-docker"
version = "0.1.0"
description = "Docker orchestration for ego hand reconstruction (ViPE + Dyn-HaMR)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["v2d_ego_hand_reconstruction", "v2d_ego_hand_reconstruction.docker"]

[tool.setuptools.package-dir]
"v2d_ego_hand_reconstruction" = ".."
"v2d_ego_hand_reconstruction.docker" = "."
