# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: CC-BY-4.0 AND Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-ego-hand-reconstruction-docker"
version = "0.1.0"
description = "Docker orchestration for ego hand reconstruction (ViPE + Dyn-HaMR)"
requires-python = ">=3.10"
dependencies = ["boto3"]

[tool.setuptools]
packages = ["v2d_ego_hand_reconstruction", "v2d_ego_hand_reconstruction.docker"]

[tool.setuptools.package-dir]
"v2d_ego_hand_reconstruction" = ".."
"v2d_ego_hand_reconstruction.docker" = "."
