[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-foundation-pose-lib"
version = "0.1.0"
description = "FoundationPose 6-DoF object pose estimation library"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "opencv-python",
    "trimesh",
    "scikit-learn",
    "v2d-common",
    "v2d-mesh-lib",
]

[tool.setuptools]
packages = ["v2d.foundation_pose.lib"]

[tool.setuptools.package-dir]
"v2d.foundation_pose.lib" = "."
