[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-foundation-stereo-lib"
version = "0.1.0"
description = "Foundation Stereo depth estimation library (TensorRT)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "opencv-python-headless",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.foundation_stereo.lib"]

[tool.setuptools.package-dir]
"v2d.foundation_stereo.lib" = "."
