[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-grounding-dino-docker"
version = "0.1.0"
description = "Docker orchestration scripts for Grounding DINO"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["v2d.grounding_dino.docker"]

[tool.setuptools.package-dir]
"v2d.grounding_dino.docker" = "."
