# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-gsplat-refinement-docker"
version = "0.1.0"
description = "Docker orchestration for v2d_gsplat_refinement"
requires-python = ">=3.10"
dependencies = ["v2d-docker"]

[tool.setuptools]
packages = ["v2d.gsplat_refinement.docker"]

[tool.setuptools.package-dir]
"v2d.gsplat_refinement.docker" = "."
