# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: CC-BY-4.0 AND Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-gsplat-refinement-lib"
version = "0.1.0"
description = "Joint hand+object pose refinement via Gaussian splatting"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "trimesh",
    "imageio",
    "imageio-ffmpeg",
    "tqdm",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.gsplat_refinement.lib"]

[tool.setuptools.package-dir]
"v2d.gsplat_refinement.lib" = "."
