# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-hamer-lib"
version = "0.1.0"
description = "HaMeR per-frame MANO regression driven by SAM2 hand masks"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "opencv-python",
    "v2d-common",
]

[tool.setuptools]
packages = ["v2d.hamer.lib"]

[tool.setuptools.package-dir]
"v2d.hamer.lib" = "."
