[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2d-hand-alignment-docker"
version = "0.1.0"
description = "Docker orchestration for hand alignment"
requires-python = ">=3.10"
dependencies = ["v2d-docker"]

[tool.setuptools]
packages = ["v2d.hand_alignment.docker"]

[tool.setuptools.package-dir]
"v2d.hand_alignment.docker" = "."
